--- a/board/.settings/org.eclipse.wst.common.component
+++ b/board/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="board">
-        <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
+        <wb-resource deploy-path="/" source-path="/src"/>
+        <wb-resource deploy-path="/" source-path="/WebContent"/>
+        <wb-resource deploy-path="/" source-path="/build"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/WebContent"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="게시판_과제"/>
         <property name="java-output-path" value="/board/build/classes"/>
+        <property name="context-root" value="/"/>
     </wb-module>
 </project-modules>
